--- a/football_api/package.json
+++ b/football_api/package.json
@@ -13,8 +13,10 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.6",
     "morgan": "~1.7.0",
+    "passport-jwt": "^2.2.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
