--- a/football_react/package.json
+++ b/football_react/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.16.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "styled-components": "^1.4.5"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
