--- a/football_react/package.json
+++ b/football_react/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "history": "^4.6.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^1.4.5"
   },
   "devDependencies": {
