--- a/football_react/package.json
+++ b/football_react/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.1",
     "history": "^4.6.1",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
