--- a/football_react/package.json
+++ b/football_react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "halogen": "^0.2.0",
     "history": "^4.6.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
