--- a/football_api/package.json
+++ b/football_api/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "node ./bin/www",
+    "start-dev": "nodemon ./bin/www",
     "seed": "node ./bin/seed"
   },
   "dependencies": {
